src/test/ui/rfc1445/match-nonempty-array-forbidden-without-eq.stderr
error: to use a constant of type `B` in a pattern, `B` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-nonempty-array-forbidden-without-eq.rs:16:9
   |
LL |         FOO => { }
   |         ^^^

error: to use a constant of type `B` in a pattern, `B` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-nonempty-array-forbidden-without-eq.rs:16:9
   |
LL |         FOO => { }
   |         ^^^

error: aborting due to 2 previous errors

